--- a/clone/index.html
+++ b/clone/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/clone/assets/css/base.css">
     <link rel="stylesheet" href="assets/css/main.css">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="./assets/font/fontawesome-free-6.7.2/css/all.min.css">
 
 
 
